Make info and quote sections

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="mainwrapper">
+
 <!--Header starts here-->
+<div class="mainwrapper">
     <div class="header">
         <div class="topheader">
             <span class="logo"><a href="index.html">Header Logo</a></span>
@@ -29,7 +30,39 @@
         </div>
 
     </div>
-<!--Header ends here-->
 </div>
+<!--Header ends here-->
+<!--Body1 starts here-->
+    <div class="body1">
+        <div class="title">Some random information</div>
+
+        <div class="container">
+        <div class="info">
+          <img class="img" src="./images/barberry.png" alt="barberry">
+          <div class="text">This is a type of plant. We love this one.</div>
+        </div>
+        <div class="info">
+          <img class="img" src="./images/chilli.png" alt="chili">
+          <div class="text">This is another type of plant. Isn't it nice</div>
+        </div>
+        <div class="info">
+          <img class="img" src="./images/pepper.png" alt="pepper">
+          <div class="text">We have so many plants. Yay plants.</div>
+        </div>
+        <div class="info">
+          <img class="img" src="./images/saffron.png" alt="saffron">
+          <div class="text">I'm running out of things to say about plants.</div>
+        </div>
+    </div>
+<!--Body1 ends here-->
+<!--Quote starts here-->
+    <div class="quotebox">
+        <div class="quote">
+        <p class="quotetext">“He who is unable to live in society, or who has no need because he is sufficient for himself, must be either a beast or a god”</p>
+    
+        <p class="quotesignature"> - Aristotle</p>
+        </div>
+    </div>
+<!--Quote ends here-->
 </body>
 </html>
