--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <!--Header starts here-->
-<div class="mainwrapper">
+<div class="headercontainer">
     <div class="header">
         <div class="topheader">
             <span class="logo"><a href="index.html">Header Logo</a></span>
@@ -33,10 +33,10 @@
 </div>
 <!--Header ends here-->
 <!--Body1 starts here-->
-    <div class="body1">
-        <div class="title">Some random information</div>
+    <div class="imgcontainer">
+        <h1 class="title">Some random information</h1>
 
-        <div class="container">
+        <div class="imgbox">
         <div class="info">
           <img class="img" src="./images/barberry.png" alt="barberry">
           <div class="text">This is a type of plant. We love this one.</div>
@@ -53,10 +53,11 @@
           <img class="img" src="./images/saffron.png" alt="saffron">
           <div class="text">I'm running out of things to say about plants.</div>
         </div>
+        </div>
     </div>
 <!--Body1 ends here-->
 <!--Quote starts here-->
-    <div class="quotebox">
+    <div class="quotecontainer">
         <div class="quote">
         <p class="quotetext">“He who is unable to live in society, or who has no need because he is sufficient for himself, must be either a beast or a god”</p>
     
@@ -64,5 +65,21 @@
         </div>
     </div>
 <!--Quote ends here-->
+<!--Call to action starts here-->
+<div class="ctacontainer">
+    <div class="ctabox">
+        <div class="ctatextbox">
+            <div class="ctatitle">Call to action! It's time!</div>
+            <p class="ctapara">Sign up for more information about our product. To get contacts press the button!</p>    
+        </div>
+        <button id="signupcta">Sign up</button>
+    </div>
+</div>
+<!--Call to action ends here-->
+<!--Footer starts here-->
+<div class="footer">
+    The Odin Project ❤️
+</div>
+<!--Footer ends here-->
 </body>
 </html>
