Fix footer text

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <!--Call to action ends here-->
 <!--Footer starts here-->
 <div class="footer">
-    
+    The Odin Project ❤️
 </div>
 <!--Footer ends here-->
 </body>
