--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <span class="logo"><a href="index.html">Header Logo</a></span>
             <ul class="headerlinks">
                 <li><a href="http://www.google.com">main</a></li>
-                <li><a href="http://www.google.com">about</a></li>
-                <li><a href="http://www.google.com">contact</a></li>
+                <li class="marginlink"><a href="http://www.google.com">about</a></li>
+                <li class="marginlink"><a href="http://www.google.com">contact</a></li>
             </ul>
         </div>
         <div class="bottomheader">
